# HFTPerformance

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  advanced_test.json  docker-compose.yml  exchange_test.json  external_test.json  flamegraph_test.json  pipeline_test.json  simple_test.json  strategy_test.json
docs/: generate_architecture_diagram.py  generate_detailed_diagram.py
src/apps/: hftperf_main.cpp  market_data_feed_main.cpp  matching_engine_main.cpp  order_gateway_main.cpp
src/benchmark/: benchmark_main.cpp  latency_benchmark.cpp  orderbook_benchmark.cpp  throughput_benchmark.cpp
src/core/: busy_poll.hpp  cpu_affinity.hpp  lockfree_queue.hpp  memory_pool.hpp  socket_utils.hpp  spinlock.hpp  timestamp_buffer.hpp  timing.hpp  types.hpp  utils.cpp
src/exchange/: exchange_simulator.hpp
src/marketdata/: book_builder.cpp  feed_simulator.cpp  market_data_handler.cpp  market_data_handler.hpp
src/matching/: matching_engine.cpp  matching_engine.hpp  order.cpp  order.hpp  order_book.cpp  order_book.hpp  price_level.cpp  price_level.hpp
src/protocol/: fix_message.cpp  fix_message.hpp  fix_parser.cpp  rest_handler.cpp  rest_handler.hpp  websocket_handler.cpp  websocket_handler.hpp
src/strategy/: user_strategy.cpp  user_strategy.hpp
src/transport/: ipc_socket.hpp  udp_multicast.hpp
tests/: test_fix_parser.cpp  test_lockfree_queue.cpp  test_main.cpp  test_matching_engine.cpp  test_memory_pool.cpp  test_order_book.cpp
